--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "strict": true,
+    "noImplicitOverride": true,
+    "noUncheckedIndexedAccess": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "exactOptionalPropertyTypes": true,
+    "stripInternal": true,
     "noEmit": true
   }
 }
