--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "scripts": {
     "build": "tsup",
     "check": "biome check",
-    "test": "vitest",
+    "test": "vitest --typecheck",
     "spell": "cspell --no-progress ."
   },
   "keywords": [],
   "author": "uzmoi",
   "license": "MIT",
+  "dependencies": {
+    "parsea": "^0.9.0"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
     "@vitest/coverage-v8": "^2.0.5",
