--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
   "files": { "ignoreUnknown": true },
   "vcs": {
     "enabled": true,
@@ -21,7 +21,8 @@
         "noExcessiveCognitiveComplexity": "off"
       },
       "correctness": {
-        "noEmptyCharacterClassInRegex": "off"
+        "noEmptyCharacterClassInRegex": "off",
+        "useImportExtensions": "off"
       },
       "performance": {
         "noBarrelFile": "off",
