--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "uzmoi",
   "license": "MIT",
   "dependencies": {
+    "emnorst": "^1.0.0-next.2",
     "parsea": "^0.10.1"
   },
   "devDependencies": {
